--- a/miniProgramX.html
+++ b/miniProgramX.html
@@ -1,7 +1,7 @@
 <html>
 <body>	
-	<pre id='log'></pre>
-	<h1>Wait 5sec for doing something good...</h1>
+	<h1>Please be chainged font size..</h1>
+	<pre id='log'></pre>	
 	<script>
 		var __Mywx = undefined;
 		var _callback_count = 1004;
