--- a/miniProgramX.html
+++ b/miniProgramX.html
@@ -1,7 +1,8 @@
 <html>
 <body>	
 	<h1>Please be chainged font size..</h1>
-	<pre id='log'></pre>	
+	<pre id='log'></pre>
+	<input type=button value="Push me"></input>
 	<script>
 		var __Mywx = undefined;
 		var _callback_count = 1004;
