--- a/miniProgramX.html
+++ b/miniProgramX.html
@@ -36,7 +36,7 @@
 	  		{
 	  			var arr = new Array;
 			    arr[0] = msgArrayString;
-			    arr[1] = _xxyy;
+			    arr[1] = randomStr; // fxxk _xxyy!
 			    var str = arr.join("");
 			    var msgSha = '';
 
