--- a/miniProgramX.html
+++ b/miniProgramX.html
@@ -83,7 +83,7 @@
   			mylog('[^] setFontSizeCallback call, fontSize: ' + argv.fontSize);
 
   			call('setFontSizeCallback', {
-  				"fontSize" : "1"
+  				"fontSize" : argv.fontSize
   			});
 
   			mylog('[^] setFontSizeCallback Done');
