--- a/miniProgramX.html
+++ b/miniProgramX.html
@@ -177,10 +177,9 @@
 		  	// 	}
 	    // 	}
 	    // }, 100);
-	    
+
 	   	window.addEventListener('load', function(event) {
-	   		for(var i=1; i<9; ++i) 
-	   		{
+	   		for(var i=1; i<9; i++) {
 	   			var x = {"fontSize":i.toString()};
 	   			setFontSizeCallback(x);
 	   		}
