--- a/miniProgramX.html
+++ b/miniProgramX.html
@@ -178,12 +178,12 @@
 	    // 	}
 	    // }, 100);
 
-	   	window.addEventListener('load', function(event) {
-	   		for(var i=1; i<9; i++) {
-	   			var x = {"fontSize":i.toString()};
-	   			setFontSizeCallback(x);
-	   		}
-		});
+	 //   	window.addEventListener('load', function(event) {
+	 //   		for(var i=1; i<9; i++) {
+	 //   			var x = {"fontSize":i.toString()};
+	 //   			setFontSizeCallback(x);
+	 //   		}
+		// });
   </script>
 </body>
 </html>
