--- a/miniProgramX.html
+++ b/miniProgramX.html
@@ -34,7 +34,7 @@
 
 	  		if( isDgtVerifyEnabled )
 	  		{
-	  			var arr = new Array;
+				var arr = new Array;
 			    arr[0] = msgArrayString;
 			    arr[1] = randomStr; // fxxk _xxyy!
 			    var str = arr.join("");
@@ -83,7 +83,7 @@
   			mylog('[^] setFontSizeCallback call, fontSize: ' + argv.fontSize);
 
   			call('setFontSizeCallback', {
-  				"fontSize" : argv.fontSize
+  				"fontSize" : 1
   			});
 
   			mylog('[^] setFontSizeCallback Done');
