--- a/miniProgramX.html
+++ b/miniProgramX.html
@@ -1,8 +1,12 @@
 <html>
 <body>	
-	<h1>Please be chainged font size..</h1>
-	<pre id='log'></pre>
-	<input type=button value="Push me"></input>
+	<h1>Please test 'setFontSizeCallback' as below</h1>
+	1. Click the right-top ... icon
+	2. Click the 글꼴 설정 icon
+	3. Change the font size up
+	4. Refresh
+	5. You can see changing of the font size to 1
+	<pre id='log'></pre>	
 	<script>
 		var __Mywx = undefined;
 		var _callback_count = 1004;
