--- a/miniProgramX.html
+++ b/miniProgramX.html
@@ -1,11 +1,11 @@
 <html>
 <body>	
-	<h1>Please test 'setFontSizeCallback' as below</h1>
-	1. Click the right-top ... icon
-	2. Click the 글꼴 설정 icon
-	3. Change the font size up
-	4. Refresh
-	5. You can see changing of the font size to 1
+	<h1>Please test 'setFontSizeCallback' as below</h1>	
+	<h2>1. Click the right-top ... icon<br>
+	2. Click the 글꼴 설정 icon<br>
+	3. Change the font size up<br>
+	4. Refresh<br>
+	5. You can see changing of the font size to 1<br></h2>
 	<pre id='log'></pre>	
 	<script>
 		var __Mywx = undefined;
