--- a/wx.html
+++ b/wx.html
@@ -5,7 +5,7 @@
 	2. Click the 글꼴 설정 icon<br>
 	3. Change the font size up<br>
 	4. Refresh<br>
-	5. You can see changing of the font size to 1 after 3 secs.<br></h2>
+	5. Font size will be 1 after 3 secs.<br></h2>
 	<pre id='log'></pre>	
 	<script>
 		var __Mywx = undefined;
