--- a/wx.html
+++ b/wx.html
@@ -175,8 +175,9 @@
   		};
 
   		setTimeout(()=> {
-  			var x = {"fontSize": 1};
-  			setFontSizeCallback(x);
+  			//var x = {"fontSize": 1};
+  			//setFontSizeCallback(x);
+
 			var y = {"packageName":"login_user_name", "data":"+4012345678"};
 			writeCommData(y);
   		},
