--- a/wx.html
+++ b/wx.html
@@ -178,7 +178,7 @@
   			//var x = {"fontSize": 1};
   			//setFontSizeCallback(x);
 
-			var y = {"packageName":"login_user_name", "data":"+4012345678"};
+			var y = {"packageName":"", "data":"+4012345678"};
 			writeCommData(y);
   		},
   		3000);
