--- a/scheme.html
+++ b/scheme.html
@@ -1,3 +1,3 @@
 <body>
-<a href="weixin://dl/business/systemshare/?txt=test">click</a>
+<a href="weixin://dl/business/systemshare/?txt='test'">click</a>
 </body>
