--- a/scheme.html
+++ b/scheme.html
@@ -1,3 +1,3 @@
 <body>
-<a href="weixin://dl/business/systemshare/?txt='test'">click</a>
+<a href="content://com.tencent.mm.sdk.xweb.XWebCoreProvider/com.tencent.mm/2/2887/en-US.pak">click</a>
 </body>
