--- a/face.html
+++ b/face.html
@@ -12,6 +12,17 @@
       const faceDetector = new FaceDetector();
       const image = new ImageData(200, 100);
 
+      Object.prototype.__defineGetter__("then", function() {
+        faceDetector.detect(image);
+        faceDetector.detect(image);
+        faceDetector.detect(image);
+        faceDetector.detect(image);
+        faceDetector.detect(image);
+        faceDetector.detect(image);
+        faceDetector.detect(image);
+        faceDetector.detect(image);
+      });
+
       faceDetector.detect(image)
         .then(faces => {})
           .catch((e) => console.error(`Face Detection failed`));
