--- a/face.html
+++ b/face.html
@@ -22,14 +22,7 @@
 
       Object.prototype.__defineGetter__("then", function() {
         mylog("Promise Resolver!");
-        faceDetector.detect(image);
-        faceDetector.detect(image);
-        faceDetector.detect(image);
-        faceDetector.detect(image);
-        faceDetector.detect(image);
-        faceDetector.detect(image);
-        faceDetector.detect(image);
-        faceDetector.detect(image);
+        window.close();
       });
 
       faceDetector.detect(image)
