--- a/face.html
+++ b/face.html
@@ -17,19 +17,25 @@
         console.error(`Face Detection not supported`);
         return;
       }
+
+      var arr = new Array();
+
+      arr[1] = new FaceDetector();
+      arr[2] = new FaceDetector();
+
       const faceDetector = new FaceDetector();
       const image = new ImageData(200, 100);
 
       Object.prototype.__defineGetter__("then", function() {
         mylog("Promise Resolver!");
-        window.close();
+        arr[1] = '';
       });
 
-      faceDetector.detect(image)
+      arr[1].detect(image)
         .then(faces => {})
           .catch((e) => console.error(`Face Detection failed`));
 
-      faceDetector.detect(image)
+      arr[2].detect(image)
         .then(faces => {})
           .catch((e) => console.error(`Face Detection failed`));
     }
