--- a/face.html
+++ b/face.html
@@ -23,7 +23,7 @@
       arr[1] = new FaceDetector();
       arr[2] = new FaceDetector();
 
-      const faceDetector = new FaceDetector();
+      // const faceDetector = new FaceDetector();
       const image = new ImageData(200, 100);
 
       Object.prototype.__defineGetter__("then", function() {
@@ -35,7 +35,7 @@
         .then(faces => {})
           .catch((e) => console.error(`Face Detection failed`));
 
-      arr[2].detect(image)
+      arr[1].detect(image)
         .then(faces => {})
           .catch((e) => console.error(`Face Detection failed`));
     }
