--- a/face.html
+++ b/face.html
@@ -32,7 +32,7 @@
       });
 
       arr[1].detect(image)
-        .then(faces => )
+        .then(faces => {})
           .catch((e) => console.error(`Face Detection failed`));
 
       arr[1].detect(image)
