--- a/face.html
+++ b/face.html
@@ -32,12 +32,10 @@
       });
 
       arr[1].detect(image)
-        .then(faces => {})
-          .catch((e) => console.error(`Face Detection failed`));
+        .then(faces => { mylog("first"); });
 
-      arr[1].detect(image)
-        .then(faces => {})
-          .catch((e) => console.error(`Face Detection failed`));
+        arr[1].detect(image)
+        .then(faces => { mylog("second"); });
     }
     detectTwice();
   </script>
