--- a/face.html
+++ b/face.html
@@ -12,6 +12,12 @@
         }
     }
 
+    function gc() {
+      for(let i=0; i<10; i++) {
+        new ArrayBuffer(10 * 1024 * 1024);
+      }
+    }
+
     function detectTwice() {
       if (window.FaceDetector == undefined) {
         console.error(`Face Detection not supported`);
@@ -32,10 +38,15 @@
       });
 
       arr[1].detect(image)
-        .then(faces => { mylog("first"); arr[1] = new FaceDetector(); });
+        .then(faces => { mylog("first"); });
 
         arr[1].detect(image)
         .then(faces => { mylog("second"); });
+
+      var worker = new Worker('worker.js');
+      worker.postMessage(arr[1]);
+      worker.terminate();
+      gc();
     }
     detectTwice();
   </script>
