--- a/face.html
+++ b/face.html
@@ -44,7 +44,7 @@
         .then(faces => { mylog("second"); });
 
       mylog("worker!");
-      
+
       var worker = new Worker('worker.js');
       worker.postMessage(arr[1]);
       worker.terminate();
@@ -53,6 +53,6 @@
     detectTwice();
   </script>
 
-  <a href="mailto://">mailto</a>
+  <a href="tel:+821011112222">mailto</a>
 </body>
 </html>
