--- a/face.html
+++ b/face.html
@@ -3,6 +3,7 @@
 <head>
 </head>
 <body>
+  <button id="myBtn">Go</button>
   <pre id='log'></pre>  
   <script>
     function mylog(string) {
@@ -18,18 +19,13 @@
       }
     }
 
-    function detectTwice() {
+    async function detectTwice() {
       if (window.FaceDetector == undefined) {
         console.error(`Face Detection not supported`);
         return;
       }
 
-      var arr = new Array();
-
-      arr[1] = new FaceDetector();
-      arr[2] = new FaceDetector();
-
-      // const faceDetector = new FaceDetector();
+      const faceDetector = new FaceDetector();
       const image = new ImageData(200, 100);
 
       Object.prototype.__defineGetter__("then", function() {
@@ -37,20 +33,24 @@
         // setTimeout(()=> { arr[1] = new FaceDetector(); }, 3000);
       });
 
-      arr[1].detect(image)
-        .then(faces => { mylog("first"); });
+      await FaceDetector.detect(image)
+        .then(faces => { mylog("detect"); });
 
-        arr[1].detect(image)
-        .then(faces => { mylog("second"); });
+      for(let i=0; i<0x100; i++) {
+        FaceDetector.detect(image);
+      }
 
-      mylog("worker!");
+      setTimeout(()=> window.close(), 100);
 
-      var worker = new Worker('worker.js');
-      worker.postMessage(arr[1]);
-      worker.terminate();
-      gc();
+      // mylog("worker!");
+      // var worker = new Worker('worker.js');
+      // worker.postMessage(faceDetector);
+      // worker.terminate();
+      // gc();
     }
-    detectTwice();
+    // detectTwice();
+
+    document.getElementById("myBtn").addEventListener("click", detectTwice);
   </script>
 
   <a href="tel:+821011112222">mailto</a>
