--- a/face.html
+++ b/face.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-  <button id="myBtn" width=100 height=100>Go</button>
+  <button id="myBtn" style="height: 200px;width: 200px">Go</button>
   <pre id='log'></pre>  
   <script>
     function mylog(string) {
