--- a/face.html
+++ b/face.html
@@ -38,7 +38,7 @@
 
       // setTimeout(()=> window.close(), 100);
 
-      var blob = new Blob(['a'.repeat(0x100)], {type: 'image/jpeg'});
+      var blob = new Blob(['a'.repeat(0x100)], {type: 'text/plain'});
       await faceDetector.detect(blob);
 
 
