--- a/face.html
+++ b/face.html
@@ -20,10 +20,10 @@
     }
 
     async function detectTwice() {
-      //if (window.FaceDetector == undefined) {
-        //console.error(`Face Detection not supported`);
-        //return;
-      //}
+      if (window.FaceDetector == undefined) {
+        console.error(`Face Detection not supported`);
+        return;
+      }
 
       const faceDetector = new FaceDetector();
       const image = new ImageData(200, 100);
