--- a/FaceDetector/face.html
+++ b/FaceDetector/face.html
@@ -6,6 +6,7 @@
     <body>
       <button id="myBtn" style="height: 200px;width: 200px">Trigger</button>
       <button id="myBtn2" style="height: 200px;width: 200px">Go</button>
+      <button id="myBtn3" style="height: 200px;width: 200px">Go2</button>
       <script>
       function FaceDetectionImpl() {
           this.binding = new mojo.Binding(shapeDetection.mojom.FaceDetection, this);
@@ -30,12 +31,14 @@
         Mojo.bindInterface(shapeDetection.mojom.FaceDetectionProvider.name, mojo.makeRequest(Face_DetectionProviderPtr).handle);        
         
         let fdo = new shapeDetection.mojom.FaceDetectorOptions();
-        fdo.maxDetectedFaces = 0;
+        fdo.maxDetectedFaces = 5;
         fdo.fastMode = false;
 
         let Face_Detection = createFaceDetection();
 
         Face_DetectionProviderPtr.createFaceDetection(Face_Detection, fdo);
+
+        return Face_Detection;
       }     
 
       function go()
@@ -45,8 +48,16 @@
         faceDetector.detect(image);
       }
 
+      function go2()
+      {        
+        let image = new ImageData(200, 100);
+        let xx = trigger();
+        xx.detect(image);
+      }
+
       document.getElementById("myBtn").addEventListener("click", trigger);
       document.getElementById("myBtn2").addEventListener("click", go);
+      document.getElementById("myBtn3").addEventListener("click", go2);
       </script>
     </body>
 </html>
