--- a/FaceDetector/face.html
+++ b/FaceDetector/face.html
@@ -46,14 +46,36 @@
 
       function go()
       {
-        let faceDetector = new FaceDetector();
-        let image = new ImageData(200, 100);
+                let arr = new Uint8ClampedArray(40000);
+        for(let i=0; i<arr.length; i+=4) {
+          arr[i+0] = 0;
+          arr[i+1] = 190;
+          arr[i+2] = 0;
+          arr[i+3] = 255;
+        }
+
+        arr[1000] = 512;
+
+        let image = new ImageData(arr, 200);
+
+        let faceDetector = new FaceDetector();  
+        
         faceDetector.detect(image);
       }
 
       function go2()
       {        
-        let image = new ImageData(200, 100);
+        let arr = new Uint8ClampedArray(40000);
+        for(let i=0; i<arr.length; i+=4) {
+          arr[i+0] = 0;
+          arr[i+1] = 190;
+          arr[i+2] = 0;
+          arr[i+3] = 255;
+        }
+
+        arr[1000] = 512;
+
+        let image = new ImageData(arr, 200);
         let xx = trigger();
         xx.detect(image);
       }
